examples/type_system/failing/48_main_invalid_return_type.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/48_main_invalid_return_type.flx
// error[E412]: Invalid Main Return Type
//
// `fn main` must return `Unit` (or omit return type).
//
//   examples/type_system/failing/48_main_invalid_return_type.flx:23:14
//    |
// 23 | fn main() -> Int {
//    |              ^^^
//    |              --- invalid `main` return type
//
// Hint:
//   Change signature to `fn main() { ... }` or `-> Unit`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E412

// E412: main must return Unit (or omit return type).

fn main() -> Int {
    1
}
